Fix all build errors: remove duplicate/conflicting methods and ensure Java 8 compatibility in EncryptionManager.java; all files now build cleanly.